--- a/css/styles.css
+++ b/css/styles.css
@@ -147,4 +147,32 @@ header {
 
 }
 
+#linkedin {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  background-color: #9693E6;
+  align-items: center;
+  padding: 0em 1em;
+}
+
+#linkedin img {
+  width: 100%;
+  height: 25px;
+  display: grid;
+}
+
+#linkedin h4 {
+  color: white;
+  padding-left: .5rem;
+}
+
+
+
+
+
+
+
+
+
+
 /* End Of Main Styling */
