--- a/css/styles.css
+++ b/css/styles.css
@@ -1,61 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "PT Sans", sans-serif;
-  background-color: white;
-}
-
-#menu-icon {
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-  color: white;
-}
-
-.menu-icon span {
-  height: 3px;
-  width: 40px;
-  background-color: white;
-  margin: 6px 0;
-}
-
-header > img {
-  max-width: 150px;
-  height: auto;
-}
-
-header {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  justify-items: start;
-  padding: 5px;
-  background-color: #0084FF;
-  height: 15vh;
-}
-
-.menu-icon {
-  justify-self: end;
-}
-
-/* End of Header Styling */
-/* Main Styling */
-.card {
-  display: grid;
-  border: 1px solid black;
-  border-radius: 25px;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: auto;
-  justify-items: center;
-}
-
-.card img {
-  width: 100%;
-  height: auto;
-}
-
 .container {
   width: 100%;
   margin-left: auto;
@@ -64,105 +6,94 @@ header {
   padding-right: 0.5rem;
 }
 
-#demo-application {
-  background-color: #B8DDFF;
-  color: #0084FF;
-  margin: 5rem 0px 2rem 0px;
-  grid-template-rows: repeat(4, auto);
+@media screen and (max-width: 640px) {
+  .container {
+    max-width: 475px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 640px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .container {
+    max-width: 768px;
+  }
+}
+body {
+  margin: 0px;
+  padding: 0px;
+  font-family: "PT Sans", sans-serif;
+  overflow-x: hidden;
 }
 
-#demo-application p {
-  font-size: 1.7rem;
+header {
+  background-color: #0084FF;
+  width: auto;
+  height: auto;
+  overflow-x: hidden;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-items: center;
+}
+
+header img {
+  justify-self: start;
+  padding-left: 1em;
+}
+
+.menu-icon {
+  justify-self: end;
+  padding-right: 2em;
+  color: white;
+}
+
+img {
+  height: auto;
+  width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  img {
+    max-width: 30%;
+    max-height: fit-content;
+  }
+  header img {
+    max-width: 30%;
+  }
+}
+.card {
+  border: 1px solid black;
+  border-radius: 25px;
+  padding: 1em;
+  font-size: 1.6em;
   text-align: left;
-  justify-self: center;
+  justify-items: center;
+  display: grid;
 }
 
-#demo-application h1 {
-  font-size: 2.5rem;
-  justify-self: center;
+#demo-application {
+  color: #0084FF;
+  background-color: #B8DDFF;
 }
 
 #app-store {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 1fr;
+  border: 1px #0084FF solid;
   background-color: #0084FF;
-  border: 1px solid #0084FF;
-  border-radius: 20rem;
-  align-items: center;
-  max-width: fit-content;
-  padding: 0px 3.5rem;
-  margin: 0;
-}
-
-#app-store img {
-  width: 1.5rem;
-  height: auto;
-  justify-self: start;
-}
-
-#app-store p {
   color: white;
-  justify-self: center;
-  font-size: 1.2rem;
+  border-radius: 50px;
+  padding: 1rem;
 }
 
-#blue-phone {
-  width: 50%;
-  margin-top: 1.5rem;
-}
-
-@media screen and (max-width: 768px) {
-  #blue-phone {
-    justify-self: start;
-    padding-left: 4rem;
-  }
-  #app-store {
-    justify-self: start;
-    margin-left: 5rem;
+@media screen and (max-width: 640px) {
+  #demo-application {
+    display: grid;
+    grid-template-rows: repeat(4, minmax(auto, auto));
   }
 }
-#clean-code {
-  background-color: #CAF0DB;
-  color: #54C788;
-}
-
-@media screen and (max-width: 768px) {
-  #clean-code img {
-    width: 25%;
-  }
-}
-#web-design {
-  background-color: #FFD2D2;
-  color: #FF8A8A;
-}
-
-#development {
-  background-color: #FFE7C4;
-  color: #FFC166;
-}
-
-#branding {
-  background-color: #D5D4F5;
-  color: #9693E6;
-}
-
-#linkedin {
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  background-color: #9693E6;
-  align-items: center;
-}
-
-#linkedin img {
-  width: 25px;
-  height: 25px;
-  display: grid;
-}
-
-#linkedin h4 {
-  color: white;
-}
-
-/* End Of Main Styling */
 
 /*# sourceMappingURL=styles.css.map */
