--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,188 +4,92 @@ $light-blue: #B8DDFF;
 $dark-green: #54C788;
 $light-green: #CAF0DB;
 
-$dark-Red: #FF8A8A;
+$dark-red: #FF8A8A;
 $light-red: #FFD2D2;
 
-$dark-Yellow: #FFC1b6;
+$dark-yellow: #FFC166;
 $light-yellow: #FFE7C4;
 
-$dark-Purple: #9693E6;
+$dark-purple: #9693E6;
 $light-purple: #D5D4F5;
 
-$dark-Grey: #333333;
+$dark-grey: #333333;
+
+@use "responsive";
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   font-family: 'PT Sans', sans-serif;
-  background-color: white;
-}
-
-// Header Styling
-#menu-icon {
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-  color: white;
-}
-
-.menu-icon span {
-  height: 3px;
-  width: 40px;
-  background-color: white;
-  margin: 6px 0;
-}
-
-header>img {
-  max-width: 150px;
-  height: auto;
+  overflow-x: hidden;
 }
 
 header {
+  background-color: $dark-blue;
+  width: auto;
+  height: auto;
+  overflow-x: hidden;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
-  justify-items: start;
-  padding: 5px;
-  background-color: $dark-blue;
-  height: 15vh;
+  justify-items: center;
+}
+
+header img {
+  justify-self: start;
+  padding-left: 1em;
 }
 
 .menu-icon {
   justify-self: end;
+  padding-right: 2em;
+  color: white;
 }
 
-/* End of Header Styling */
+img {
+  height: auto;
+  width: 100%;
+}
 
-/* Main Styling */
+@media screen and (max-width:768px) {
+  img {
+    max-width: 30%;
+    max-height: fit-content;
+  }
+
+  header img {
+    max-width: 30%;
+  }
+}
+
 .card {
-  display: grid;
   border: 1px solid black;
   border-radius: 25px;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: auto;
+  padding: 1em;
+  font-size: 1.6em;
+  text-align: left;
   justify-items: center;
-}
-
-.card img {
-  width: 100%;
-  height: auto;
-}
-
-.container {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  display: grid;
 }
 
 #demo-application {
-  background-color: $light-blue;
   color: $dark-blue;
-  margin: 5rem 0px 2rem 0px;
-  grid-template-rows: repeat(4, auto);
-}
-
-#demo-application p {
-  font-size: 1.7rem;
-  text-align: left;
-  justify-self: center;
-}
-
-#demo-application h1 {
-  font-size: 2.5rem;
-  justify-self: center;
+  background-color: $light-blue;
 }
 
 #app-store {
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  background-color: #0084FF;
-  border: 1px solid #0084FF;
-  border-radius: 20rem;
-  align-items: center;
-  max-width: fit-content;
-  padding: 0px 3.5rem;
-  margin: 0;
-}
-
-#app-store img {
-  width: 1.5rem;
-  height: auto;
-  justify-self: start;
-}
-
-#app-store p {
+  grid-template-columns: 1fr 1fr;
+  border: 1px $dark-blue solid;
+  background-color: $dark-blue;
   color: white;
-  justify-self: center;
-  font-size: 1.2rem;
+  border-radius: 50px;
+  padding: 1rem;
 }
 
-#blue-phone {
-  width: 50%;
-  margin-top: 1.5rem;
-}
-
-@media screen and (max-width:768px) {
-  #blue-phone {
-    justify-self: start;
-    padding-left: 4rem;
-  }
-
-  #app-store {
-    justify-self: start;
-    margin-left: 5rem;
-  }
-
-}
-
-#clean-code {
-  background-color: #CAF0DB;
-  color: #54C788;
-}
-
-@media screen and (max-width:768px) {
-  #clean-code img {
-    width: 25%;
+@media screen and (max-width:640px) {
+  #demo-application {
+    display: grid;
+    grid-template-rows: repeat(4, minmax(auto, auto));
   }
 }
-
-
-#web-design {
-  background-color: #FFD2D2;
-  color: #FF8A8A;
-}
-
-#development {
-  background-color: #FFE7C4;
-  color: #FFC166;
-}
-
-#branding {
-  background-color: #D5D4F5;
-  color: #9693E6;
-}
-
-
-#linkedin {
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  background-color: #9693E6;
-  align-items: center;
-}
-
-#linkedin img {
-  width: 25px;
-  height: 25px;
-  display: grid;
-}
-
-#linkedin h4 {
-  color: white;
-}
-
-/* End Of Main Styling */
