--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,17 @@ body {
   overflow-x: hidden;
 }
 
+img {
+  height: auto;
+  width: 100%;
+}
+
+.card {
+  display: grid;
+  border: 1px solid black;
+  border-radius: 25px;
+}
+
 header {
   background-color: #0084FF;
   width: auto;
@@ -42,6 +53,7 @@ header {
 header img {
   justify-self: start;
   padding-left: 1em;
+  max-width: 30%;
 }
 
 .menu-icon {
@@ -50,49 +62,120 @@ header img {
   color: white;
 }
 
-img {
-  height: auto;
-  width: 100%;
-}
-
 @media screen and (max-width: 768px) {
-  img {
+  #clean-code img,
+  #web-design img,
+  #development img,
+  #branding img {
     max-width: 30%;
     max-height: fit-content;
-  }
-  header img {
-    max-width: 30%;
+    margin-top: 2.5rem;
   }
 }
-.card {
-  border: 1px solid black;
-  border-radius: 25px;
-  padding: 1em;
-  font-size: 1.6em;
-  text-align: left;
-  justify-items: center;
-  display: grid;
+@media screen and (max-width: 768px) {
+  #demo-application,
+  #clean-code,
+  #web-design,
+  #development,
+  #branding {
+    text-align: left;
+    font-size: 1.5rem;
+    align-items: center;
+    justify-items: center;
+  }
 }
-
+@media screen and (max-width: 768px) {
+  #demo-application > h1 {
+    justify-self: start;
+    padding-left: 2.5rem;
+  }
+}
 #demo-application {
+  grid-template-rows: repeat(4, auto);
   color: #0084FF;
   background-color: #B8DDFF;
+  margin-top: 5rem;
 }
 
 #app-store {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  border: 1px #0084FF solid;
+  border: 1px solid #0084FF;
   background-color: #0084FF;
   color: white;
   border-radius: 50px;
-  padding: 1rem;
+  justify-items: center;
+  justify-self: start;
+  width: 1fr;
+  height: auto;
+  word-wrap: none;
+  grid-auto-rows: 1fr;
+  padding: 0px 0.5rem 0.5rem 0rem;
+  margin-left: 2rem;
 }
 
-@media screen and (max-width: 640px) {
-  #demo-application {
+#app-store img {
+  width: 1.5rem;
+  height: auto;
+  justify-self: center;
+  align-self: center;
+  margin-left: 2rem;
+}
+
+@media screen and (max-width: 768px) {
+  #blue-phone {
+    align-self: end;
+    width: 40%;
+    padding: 0px 0px 0px 4rem;
+    justify-self: start;
+    height: auto;
+  }
+}
+#clean-code {
+  background-color: #CAF0DB;
+  color: #54C788;
+  margin-top: 2rem;
+}
+
+#web-design {
+  background-color: #FFD2D2;
+  color: #FF8A8A;
+  margin-top: 2rem;
+}
+
+#development {
+  background-color: #FFE7C4;
+  color: #FFC166;
+  margin-top: 2rem;
+}
+
+#branding {
+  background-color: #D5D4F5;
+  color: #9693E6;
+  margin: 2rem 0 5rem 0;
+}
+
+@media screen and (max-width: 768px) {
+  #strategic-planning {
+    border-radius: 0px;
+    background-color: #9693E6;
+    color: white;
+    text-align: left;
+    width: 100%;
     display: grid;
-    grid-template-rows: repeat(4, minmax(auto, auto));
+    grid-template-rows: repeat(4, auto);
+    font-size: 1.2rem;
+    justify-items: center;
+  }
+  #strategic-planning h1 {
+    justify-self: start;
+    margin-left: 5rem;
+  }
+  #app-development {
+    margin: 3rem;
+    display: grid;
+    grid-template-rows: repeat(4, auto);
+    text-align: center;
   }
 }
 
