--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,4 @@
+// Variable References (Colors...duh) //
 $dark-blue: #0084FF;
 $light-blue: #B8DDFF;
 
@@ -15,8 +16,10 @@ $light-purple: #D5D4F5;
 
 $dark-grey: #333333;
 
+// Partials... also duh //
 @use "responsive";
 
+// General Selector Styling // 
 body {
   margin: 0px;
   padding: 0px;
@@ -24,6 +27,20 @@ body {
   overflow-x: hidden;
 }
 
+img {
+  height: auto;
+  width: 100%;
+}
+
+.card {
+  display: grid;
+  border: 1px solid black;
+  border-radius: 25px;
+}
+
+// End Of General Styling //
+
+// Header Styling //
 header {
   background-color: $dark-blue;
   width: auto;
@@ -38,6 +55,7 @@ header {
 header img {
   justify-self: start;
   padding-left: 1em;
+  max-width: 30%;
 }
 
 .menu-icon {
@@ -46,50 +64,141 @@ header img {
   color: white;
 }
 
-img {
-  height: auto;
-  width: 100%;
+// End Of Header Styling //
+
+// 5-Card Layout Styling (Including Media Queries for Mobile (Max-width: 768px)) //
+@media screen and (max-width:768px) {
+
+  #clean-code img,
+  #web-design img,
+  #development img,
+  #branding img {
+    max-width: 30%;
+    max-height: fit-content;
+    margin-top: 2.5rem;
+  }
 }
 
 @media screen and (max-width:768px) {
-  img {
-    max-width: 30%;
-    max-height: fit-content;
-  }
 
-  header img {
-    max-width: 30%;
+  #demo-application,
+  #clean-code,
+  #web-design,
+  #development,
+  #branding {
+    text-align: left;
+    font-size: 1.5rem;
+    align-items: center;
+    justify-items: center;
   }
 }
 
-.card {
-  border: 1px solid black;
-  border-radius: 25px;
-  padding: 1em;
-  font-size: 1.6em;
-  text-align: left;
-  justify-items: center;
-  display: grid;
+// Demo Application Card Styling //
+@media screen and (max-width:768px) {
+  #demo-application>h1 {
+    justify-self: start;
+    padding-left: 2.5rem;
+  }
 }
 
 #demo-application {
+  grid-template-rows: repeat(4, auto);
   color: $dark-blue;
   background-color: $light-blue;
+  margin-top: 5rem;
 }
+
 
 #app-store {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  border: 1px $dark-blue solid;
+  border: 1px solid $dark-blue;
   background-color: $dark-blue;
   color: white;
   border-radius: 50px;
-  padding: 1rem;
+  justify-items: center;
+  justify-self: start;
+  width: 1fr;
+  height: auto;
+  word-wrap: none;
+  grid-auto-rows: 1fr;
+  padding: 0px .5rem .5rem 0rem;
+  margin-left: 2rem;
 }
 
-@media screen and (max-width:640px) {
-  #demo-application {
-    display: grid;
-    grid-template-rows: repeat(4, minmax(auto, auto));
+#app-store img {
+  width: 1.5rem;
+  height: auto;
+  justify-self: center;
+  align-self: center;
+  margin-left: 2rem;
+}
+
+@media screen and (max-width:768px) {
+  #blue-phone {
+    align-self: end;
+    width: 40%;
+    padding: 0px 0px 0px 4rem;
+    justify-self: start;
+    height: auto;
   }
 }
+
+// End Of Demo Application Card Styling //
+
+#clean-code {
+  background-color: $light-green;
+  color: $dark-green;
+  margin-top: 2rem;
+}
+
+#web-design {
+  background-color: $light-red;
+  color: $dark-red;
+  margin-top: 2rem;
+}
+
+#development {
+  background-color: $light-yellow;
+  color: $dark-yellow;
+  margin-top: 2rem;
+}
+
+#branding {
+  background-color: $light-purple;
+  color: $dark-purple;
+  margin: 2rem 0 5rem 0;
+}
+
+// End Of 5-Card Layout Styling (Including Media Queries for Mobile (Max-width: 768px)) //
+
+// Card Within A Card Styling //
+@media screen and (max-width:768px) {
+  #strategic-planning {
+    border-radius: 0px;
+    background-color: $dark-purple;
+    color: white;
+    text-align: left;
+    width: 100%;
+    display: grid;
+    grid-template-rows: repeat(4, auto);
+    font-size: 1.2rem;
+    justify-items: center;
+  }
+
+  #strategic-planning h1 {
+    justify-self: start;
+    margin-left: 5rem;
+  }
+
+  #app-development {
+    margin: 3rem;
+    display: grid;
+    grid-template-rows: repeat(4, auto);
+    text-align: center;
+  }
+
+}
+
+
+// End Of Card Within A Card Styling //
