--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -179,26 +179,67 @@ header img {
     background-color: $dark-purple;
     color: white;
     text-align: left;
-    width: 100%;
+    width: 100vw;
+    height: auto;
     display: grid;
     grid-template-rows: repeat(4, auto);
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     justify-items: center;
+    letter-spacing: 1px;
+    line-height: 2rem;
   }
 
   #strategic-planning h1 {
     justify-self: start;
-    margin-left: 5rem;
+    font-size: 2.5rem;
+    margin-left: 3.5rem;
   }
 
+  #strategic-planning>img {
+    width: 70%;
+    padding-top: 5rem;
+  }
+
+  // App Development Styling //
   #app-development {
-    margin: 3rem;
     display: grid;
     grid-template-rows: repeat(4, auto);
     text-align: center;
+    background-color: white;
+    color: $dark-grey;
+    border-radius: 75px;
+    padding: 1rem;
+    margin: 3rem;
+    justify-self: center;
+    height: auto;
   }
 
-}
+  #app-development p {
+    font-size: 1.5rem;
+  }
 
+  #app-development h2 {
+    justify-self: center;
+  }
+
+  #app-development img {
+    width: 80%;
+    height: auto;
+    justify-self: center;
+    padding-top: 2rem;
+  }
+
+  #down-arrow {
+    border: 1px solid $light-purple;
+    background-color: $light-purple;
+    border-radius: 100%;
+    justify-self: center;
+    align-self: start;
+    justify-self: center;
+    margin: 1.5rem 0 1.5rem 0;
+  }
+
+  // End Of App Development Styling //
+}
 
 // End Of Card Within A Card Styling //
