--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -243,3 +243,39 @@ header img {
 }
 
 // End Of Card Within A Card Styling //
+
+// Testimonials Styling //
+#testimonials-container {
+  display: grid;
+  grid-template-rows: repeat(6, auto);
+  justify-items: center;
+  align-items: center;
+  border-radius: 0;
+}
+
+#header-text-testimonials h3 {
+  margin-top: 3rem;
+}
+
+#header-text-testimonials h1 {
+  color: $dark-purple;
+  font-size: 3rem;
+}
+
+#testimonial-1,
+#testimonial-2,
+#testimonial-3 {
+  display: grid;
+  grid-template-rows: repeat(3, auto);
+  justify-items: center;
+  border: 1px solid black;
+  width: 70%;
+}
+
+#testimonial-1 img,
+#testimonial-2 img,
+#testimonial-3 img {
+  width: 50%;
+}
+
+// End Of Testimonials Styling //
