--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -244,38 +244,85 @@ header img {
 
 // End Of Card Within A Card Styling //
 
-// Testimonials Styling //
+// Testimonials Section Styling //
 #testimonials-container {
   display: grid;
-  grid-template-rows: repeat(6, auto);
+  grid-template-rows: repeat(6, min-content);
   justify-items: center;
   align-items: center;
   border-radius: 0;
+  text-align: center;
+  row-gap: 2rem;
+}
+
+// Testimonial Header and Text (Not The Cards) Styling //
+#header-text-testimonials {
+  width: 100%;
+  height: min-content;
+  border: none;
+  justify-items: center;
+  box-sizing: border-box;
 }
 
 #header-text-testimonials h3 {
   margin-top: 3rem;
+  justify-self: center;
+  font-weight: 100;
+  font-size: 1.2rem;
 }
+
+#header-text-testimonials p {
+  font-size: 1.4rem;
+  text-align: center;
+}
+
 
 #header-text-testimonials h1 {
   color: $dark-purple;
-  font-size: 3rem;
+  font-size: 2.5rem;
+  margin: 0;
+  padding: 0;
 }
+
+// End Of Testimonial Header and Text (Not The Cards) Styling //
 
 #testimonial-1,
 #testimonial-2,
 #testimonial-3 {
-  display: grid;
   grid-template-rows: repeat(3, auto);
   justify-items: center;
-  border: 1px solid black;
-  width: 70%;
+  width: 80%;
+  height: 100%;
 }
 
 #testimonial-1 img,
 #testimonial-2 img,
 #testimonial-3 img {
-  width: 50%;
+  width: 100%;
+  height: auto;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  padding-top: 2rem;
 }
 
-// End Of Testimonials Styling //
+#testimonial-1 p,
+#testimonial-2 p,
+#testimonial-3 p {
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+}
+
+#testimonial-1 {
+  background-color: $light-red
+}
+
+#testimonial-2 {
+  background-color: $light-yellow
+}
+
+#testimonial-3 {
+  background-color: $light-green;
+}
+
+
+// End Of Testimonials Section Styling //
