--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -331,3 +331,18 @@ header img {
 }
 
 // End Of Testimonials Section Styling //
+
+
+// Benefits Of Working With Us Section Styling //
+#benefits-container {
+  grid-template-rows: repeat(7, auto);
+  background-color: $dark-purple;
+}
+
+
+
+
+
+
+
+// End Of Benefits Of Working With Us Section Styling //
