began styling for tablet sized devices, kind of have to redo the entire 5 card section, becuase of how the css selectors were coded >:(

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,16 @@
   padding-right: 0.5rem;
 }
 
+@media screen and (max-width: 475px) {
+  .container {
+    max-width: 100%;
+  }
+}
+@media screen and (max-width: 640px) {
+  .container {
+    max-width: 475px;
+  }
+}
 @media screen and (max-width: 768px) {
   .container {
     max-width: 640px;
@@ -39,6 +49,11 @@ img {
   border-radius: 25px;
 }
 
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 0;
+  }
+}
 header {
   background-color: #0084FF;
   width: auto;
@@ -71,8 +86,6 @@ header img {
     max-height: fit-content;
     margin-top: 2.5rem;
   }
-}
-@media screen and (max-width: 768px) {
   #demo-application,
   #clean-code,
   #web-design,
@@ -84,42 +97,57 @@ header img {
     justify-items: center;
   }
 }
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  #five-card-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    column-gap: 2rem;
+  }
+  #clean-code,
+  #web-design,
+  #development,
+  #branding {
+    text-align: center;
+    grid-template-rows: repeat(3, auto);
+  }
+  #clean-code img,
+  #web-design img,
+  #development img,
+  #branding img {
+    max-width: 50%;
+    align-self: center;
+    justify-self: center;
+  }
+}
 @media screen and (max-width: 768px) {
-  #demo-application > h1 {
+  #demo-application h1 {
     justify-self: start;
     padding-left: 2.5rem;
+    font-size: 3rem;
+    letter-spacing: 2px;
+    width: 100%;
+  }
+  #demo-application {
+    margin-top: 5rem;
+  }
+  #demo-application p {
+    justify-self: start;
+    padding-left: 2.5rem;
+    width: 100%;
+    font-size: 2rem;
+  }
+}
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  #demo-application {
+    grid-column-start: 1;
+    grid-column-end: 3;
   }
 }
 #demo-application {
-  grid-template-rows: repeat(4, auto);
+  grid-template-rows: repeat(2, auto);
   color: #0084FF;
   background-color: #B8DDFF;
-  margin-top: 5rem;
-}
-
-#app-store {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  border: 1px solid #0084FF;
-  background-color: #0084FF;
-  color: white;
-  border-radius: 50px;
-  justify-items: center;
-  justify-self: start;
-  width: 1fr;
-  height: auto;
-  word-wrap: none;
-  grid-auto-rows: 1fr;
-  padding: 0px 0.5rem 0.5rem 0rem;
-  margin-left: 2rem;
-}
-
-#app-store img {
-  width: 1.5rem;
-  height: auto;
-  justify-self: center;
-  align-self: center;
-  margin-left: 2rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -131,6 +159,29 @@ header img {
     height: auto;
   }
 }
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  #blue-phone {
+    width: 50%;
+    height: auto;
+  }
+}
+#app-store img {
+  width: 1.5rem;
+  justify-self: end;
+}
+
+#app-store {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  background-color: #0084FF;
+  color: white;
+  border-radius: 50px;
+  align-items: center;
+  justify-self: start;
+  padding: 0 2rem;
+  margin: 0 0 1rem 2rem;
+}
+
 #clean-code {
   background-color: #CAF0DB;
   color: #54C788;
