--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,7 +15,6 @@ $dark-purple: #9693E6;
 $light-purple: #D5D4F5;
 
 $dark-grey: #333333;
-
 // Partials... also duh //
 @use "responsive";
 
@@ -36,6 +35,7 @@ img {
   display: grid;
   border: 1px solid black;
   border-radius: 25px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width:768px) {
@@ -44,190 +44,209 @@ img {
   }
 }
 
-// End Of General Styling //
+@media screen and (min-width:768px) and (max-width:1024px) {
+  br {
+    display: none;
+  }
+}
 
+// End Of General Styling //
+// // // // // // // // // // // // // // // // // //
 // Header Styling //
 header {
   background-color: $dark-blue;
   width: auto;
-  height: auto;
+  height: 100%;
   overflow-x: hidden;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
   justify-items: center;
+  margin-bottom: 5rem;
 }
 
 header img {
   justify-self: start;
-  padding-left: 1em;
-  max-width: 30%;
+  padding-left: 1rem;
+  max-width: 20%;
 }
 
 .menu-icon {
   justify-self: end;
-  padding-right: 2em;
+  padding-right: 2rem;
   color: white;
 }
 
 // End Of Header Styling //
-
-// 5-Card Layout Styling (Including Media Queries for Mobile (Max-width: 768px)) //
-@media screen and (max-width:768px) {
-
-  #clean-code img,
-  #web-design img,
-  #development img,
-  #branding img {
-    max-width: 30%;
-    max-height: fit-content;
-    margin-top: 2.5rem;
-  }
-
-  #demo-application,
-  #clean-code,
-  #web-design,
-  #development,
-  #branding {
-    text-align: left;
-    font-size: 1.5rem;
-    align-items: center;
-    justify-items: center;
-  }
+// // // // // // // // // // // // // // // // // //
+// 5 Card Layout Styling //
+#five-card-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
 }
 
-// End Of Mobile// 
-
-// Tablet Media Queries //
-@media screen and (min-width:769px) and (max-width:1024px) {
-  #five-card-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    column-gap: 2rem;
-  }
-
-  #clean-code,
-  #web-design,
-  #development,
-  #branding {
-    text-align: center;
-    grid-template-rows: repeat(3, auto);
-  }
-
-  #clean-code img,
-  #web-design img,
-  #development img,
-  #branding img {
-    max-width: 50%;
-    align-self: center;
-    justify-self: center;
-  }
-}
-
-// Demo Application Card Styling //
-
-// Mobile //
-@media screen and (max-width:768px) {
-  #demo-application h1 {
-    justify-self: start;
-    padding-left: 2.5rem;
-    font-size: 3rem;
-    letter-spacing: 2px;
-    width: 100%;
-  }
-
-  #demo-application {
-    margin-top: 5rem;
-  }
-
-  #demo-application p {
-    justify-self: start;
-    padding-left: 2.5rem;
-    width: 100%;
-    font-size: 2rem;
-  }
-}
-
-// Tablet //
-@media screen and (min-width:769px) and (max-width:1024px) {
-  #demo-application {
-    grid-column-start: 1;
-    grid-column-end: 3;
-  }
-}
-
+//  Demo Application Card Styling //
 #demo-application {
-  grid-template-rows: repeat(2, auto);
-  color: $dark-blue;
   background-color: $light-blue;
+  color: $dark-blue;
+  padding: 2rem 2rem 0 2rem;
 }
 
-
-
-@media screen and (max-width:768px) {
-  #blue-phone {
-    align-self: end;
-    width: 40%;
-    padding: 0px 0px 0px 4rem;
-    justify-self: start;
-    height: auto;
-  }
-}
-
-@media screen and (min-width:769px) and (max-width:1024px) {
-  #blue-phone {
-    width: 50%;
-    height: auto;
-  }
-}
-
-#app-store img {
-  width: 1.5rem;
-  justify-self: end;
+#demo-application+h1 {
+  letter-spacing: 1px;
+  font-weight: 400;
+  line-height: 2em;
+  width: 100%;
+  font-size: 1.5em;
 }
 
 #app-store {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
   background-color: $dark-blue;
   color: white;
-  border-radius: 50px;
+  display: grid;
+  grid-template-columns: 40% 60%;
+  justify-items: start;
   align-items: center;
-  justify-self: start;
-  padding: 0 2rem;
-  margin: 0 0 1rem 2rem;
+  width: 35%;
+  height: auto;
+  border-radius: 50px;
 }
 
+.apple-svg {
+  justify-self: end;
+  margin-right: .5rem;
+}
 
-// End Of Demo Application Card Styling //
-
+// Clean Code Card Styling //
 #clean-code {
   background-color: $light-green;
   color: $dark-green;
-  margin-top: 2rem;
 }
 
+#clean-code h1 {
+  font-size: 2em;
+}
+
+#clean-code p {
+  letter-spacing: 1px;
+  font-weight: 400;
+  line-height: 2em;
+  width: 100%;
+  font-size: 1.5em;
+}
+
+// Web Design Card Styling //
 #web-design {
   background-color: $light-red;
   color: $dark-red;
-  margin-top: 2rem;
 }
 
+#web-design h1 {
+  font-size: 2em;
+}
+
+#web-design p {
+  letter-spacing: 1px;
+  font-weight: 400;
+  line-height: 2em;
+  width: 100%;
+  font-size: 1.5em;
+}
+
+// Development Card Styling //
 #development {
   background-color: $light-yellow;
   color: $dark-yellow;
-  margin-top: 2rem;
 }
 
+#development h1 {
+  font-size: 2em;
+}
+
+#development p {
+  letter-spacing: 1px;
+  font-weight: 400;
+  line-height: 2em;
+  width: 100%;
+  font-size: 1.5em;
+}
+
+// Branding Card Styling //
 #branding {
   background-color: $light-purple;
   color: $dark-purple;
-  margin: 2rem 0 5rem 0;
 }
 
-// End Of 5-Card Layout Styling (Including Media Queries for Mobile (Max-width: 768px)) //
+#branding h1 {
+  font-size: 2em;
+}
 
+#branding p {
+  letter-spacing: 1px;
+  font-weight: 400;
+  line-height: 2em;
+  width: 100%;
+  font-size: 1.5em;
+}
+
+
+
+// Mobile and Tablet //
+@media screen and (max-width:1024px) {
+
+  #clean-code img,
+  #web-design img,
+  #development img,
+  #branding img {
+    max-width: 40%;
+    display: grid;
+    justify-self: center;
+  }
+
+  #blue-phone {
+    width: 50%;
+    display: grid;
+    align-self: end;
+  }
+}
+
+// Tablet
+@media screen and (min-width:768px) and (max-width:1024px) {
+  #demo-application {
+    grid-column: span 2;
+  }
+
+  #demo-application img {
+    width: 50%;
+    height: 100%;
+    align-self: end;
+  }
+
+  #clean-code {
+    text-align: center;
+    padding: 2rem;
+  }
+
+  #web-design {
+    text-align: center;
+    padding: 2rem;
+  }
+
+  #development {
+    text-align: center;
+    padding: 2rem;
+  }
+
+  #branding {
+    text-align: center;
+    padding: 2rem;
+  }
+
+}
+
+// End Of 5 Card Layout Styling //
+// // // // // // // // // // // // // // // // // //
 // Card Within A Card Styling //
 @media screen and (max-width:768px) {
   #strategic-planning {
@@ -299,7 +318,7 @@ header img {
 }
 
 // End Of Card Within A Card Styling //
-
+// // // // // // // // // // // // // // // // // //
 // Testimonials Section Styling //
 #testimonials-container {
   display: grid;
@@ -341,7 +360,6 @@ header img {
 }
 
 // End Of Testimonial Header and Text (Not The Cards) Styling //
-
 #testimonial-1,
 #testimonial-2,
 #testimonial-3 {
@@ -385,8 +403,7 @@ header img {
 }
 
 // End Of Testimonials Section Styling //
-
-
+// // // // // // // // // // // // // // // // // //
 // Benefits Of Working With Us Section Styling //
 #benefits-container {
   grid-template-rows: repeat(7, auto);
@@ -425,8 +442,6 @@ header img {
   background-color: white;
 }
 
-
-
 // High Quality Card Styling //
 #high-quality {
   justify-items: left;
@@ -445,7 +460,6 @@ header img {
   font-size: 4em;
 }
 
-
 // Creative Team Card Styling //
 #creative-team {
   justify-items: left;
@@ -463,7 +477,6 @@ header img {
   padding-left: 1rem;
   font-size: 4em;
 }
-
 
 // Amazing Results Card Styling //
 #amazing-results {
@@ -519,7 +532,6 @@ header img {
   padding-left: 1rem;
 }
 
-
 // 24/7 Support Card Styling //
 #twofoursev-support {
   justify-items: left;
@@ -557,7 +569,7 @@ header img {
 }
 
 // End Of Benefits Of Working With Us Section Styling //
-
+// // // // // // // // // // // // // // // // // //
 //  About Us Section Styling //
 #about-us {
   display: grid;
@@ -570,8 +582,6 @@ header img {
     grid-template-columns: 100vw;
   }
 }
-
-
 
 #about-us h1 {
   color: $dark-purple;
@@ -623,7 +633,7 @@ header img {
 }
 
 // End Of About Us Section Styling //
-
+// // // // // // // // // // // // // // // // // //
 // Get Started Section Styling //
 #get-started {
   background-color: $dark-purple;
@@ -684,9 +694,8 @@ header img {
 }
 
 // End Of Get Started Section Styling //
-
 // End of Main Section Styling //
-
+// // // // // // // // // // // // // // // // // //
 // Footer Section Styling //
 #footer {
   background-color: $dark-grey;
@@ -695,6 +704,5 @@ header img {
   text-align: center;
   padding: 3em 2em;
 }
-
 
 // End Of Footer Section Styling //
